--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -247,8 +247,8 @@
      <rect>
       <x>80</x>
       <y>410</y>
-      <width>598</width>
-      <height>71</height>
+      <width>601</width>
+      <height>72</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="Seminar">
@@ -345,8 +345,8 @@
    <widget class="QPushButton" name="AlgorithmButton">
     <property name="geometry">
      <rect>
-      <x>1020</x>
-      <y>660</y>
+      <x>520</x>
+      <y>670</y>
       <width>80</width>
       <height>24</height>
      </rect>
@@ -359,16 +359,16 @@
     <property name="geometry">
      <rect>
       <x>690</x>
-      <y>0</y>
-      <width>731</width>
-      <height>591</height>
+      <y>10</y>
+      <width>721</width>
+      <height>581</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="prevPageButton">
     <property name="geometry">
      <rect>
-      <x>920</x>
+      <x>410</x>
       <y>610</y>
       <width>80</width>
       <height>24</height>
@@ -381,7 +381,7 @@
    <widget class="QPushButton" name="nextPageButton">
     <property name="geometry">
      <rect>
-      <x>1040</x>
+      <x>620</x>
       <y>610</y>
       <width>80</width>
       <height>24</height>
@@ -389,6 +389,19 @@
     </property>
     <property name="text">
      <string>Next</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="PageNumber">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>610</y>
+      <width>49</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
