--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,6 +39,9 @@
        </sizepolicy>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0" colspan="5">
+        <widget class="QTableWidget" name="Display"/>
+       </item>
        <item row="1" column="4">
         <spacer name="horizontalSpacer_2">
          <property name="orientation">
@@ -64,20 +67,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item row="1" column="1">
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QLineEdit" name="PullSubject"/>
-         </item>
-         <item>
-          <widget class="QPushButton" name="PullButton">
-           <property name="text">
-            <string>Pull</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
        </item>
        <item row="1" column="3">
         <layout class="QGridLayout" name="gridLayout">
@@ -124,10 +113,34 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="0" colspan="5">
-        <widget class="QTableWidget" name="Display"/>
+       <item row="1" column="1">
+        <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <widget class="QLineEdit" name="PullSubject"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="PullButton">
+           <property name="text">
+            <string>Pull</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="text">
+       <string>Created by Muhammad Uzair</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
     </item>
    </layout>
